--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
 }
 
 :root{
+  --64px: 64px;
   --56px: 56px;
   --40px: 40px;
   --32px: 32px;
@@ -526,7 +527,7 @@ select {
 
 .contact__title{
   font-weight: 600;
-  font-size: 64px;
+  font-size: var(--64px);
   line-height: 64px;
   margin-bottom: 16px;
 }
@@ -622,7 +623,7 @@ select {
 }
 
 .footer__txt{
-  font-size: 64px;
+  font-size: var(--64px);
   line-height: 72px;
   margin-bottom: .5rem;
 }
@@ -680,4 +681,28 @@ select {
 
 ::-webkit-scrollbar-thumb{
   background: hsl(0, 0%, 17%);
+}
+
+.partners__pic{
+  width: 100%;
+  height: 100px;
+  object-fit: contain;
+}
+
+.partners__card{
+  padding: 24px 0;
+  opacity: .6;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.partners__card:hover{
+  opacity: 1;
+}
+
+.title{
+  font-size: var(--64px);
+  line-height: 72px;
+  font-weight: 600;
+  margin-bottom: 60px;
 }
