--- a/css/style.css
+++ b/css/style.css
@@ -362,14 +362,51 @@ select {
   height: 200px;
   margin-bottom: -50%;
   transition: .3s;
+  position: relative;
+  overflow: hidden;
 }
 
-.home__btn img{
+.home__btn::after{
+  background: white;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  content: '';
+  transition: 1s;
+  transform: scale(0);
+  border-radius: 50%;
+}
+
+.home__btn:hover{
+  border: none;
+}
+
+.home__btn:hover.home__btn::after{
+  transform: scale(1);
+}
+
+.home__btn .home__btn-svg{
   transition: .3s;
 }
 
-.home__btn:hover img{
+.home__btn-svg{
+  position: relative;
+  z-index: 999;
+  transition: .3s;
+}
+
+.home__btn path{
+  transition: .3s;
+}
+
+.home__btn:hover .home__btn-svg{
   transform: rotate(30deg);
+}
+
+.home__btn:hover path{
+  stroke: black !important;
 }
 
 .home__scroll{
@@ -404,6 +441,31 @@ select {
   animation: down 1.5s infinite;
 }
 
+.rotate__txt{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: .3s;
+  z-index: 9;
+}
+
+.transform__txt{
+  transform: translate(-50%, -50%);
+  animation: rotate_txt 6s infinite;
+  animation-timing-function: linear;
+  animation-direction: reverse;
+  stroke: black;
+  z-index: 999;
+}
+
+.home__btn:hover .rotate__txt{
+  opacity: 1;
+  visibility: visible;
+}
+
 @keyframes down {
   0% {top: 15%;
     opacity: 0;
@@ -413,6 +475,15 @@ select {
   }
   100% {top: 70%;
     opacity: 0.1;
+  }
+}
+
+@keyframes rotate_txt{
+  0%{
+    transform: rotate(0);
+  }
+  100%{
+    transform: rotate(-1turn);
   }
 }
 
