--- a/css/style.css
+++ b/css/style.css
@@ -539,14 +539,37 @@ select {
   background: transparent;
   border: 1px solid white;
   border-radius: 50%;
+  position: relative;
+  transition: .3s;
 }
 
-.reload__btn img{
+.reload__btn::after{
+  background: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  border-radius: 50%;
+  transform: scale(0);
   transition: 1s;
 }
 
-.reload__btn:hover img{
+.reload__btn:hover.reload__btn::after{
+  transform: scale(1);
+}
+
+.reload__btn svg{
+  transition: 1s;
+  z-index: 999;
+  position: relative;
+}
+
+.reload__btn:hover svg,
+.reload__btn:hover path{
   transform: rotate(360deg);
+  stroke: #000; 
 }
 
 .about{
