--- a/css/style.css
+++ b/css/style.css
@@ -1114,3 +1114,73 @@ select {
   opacity: 1;
   visibility: visible;
 }
+
+.page__pic{
+  width: 100%;
+  height: 550px;
+  object-fit: cover;
+}
+
+.contento{
+  padding-top: 48px;
+}
+
+.contento p{
+  font-size: var(--20px);
+  line-height: var(--32px);
+  opacity: .8;
+  margin-bottom: 24px;
+}
+
+.flexer2{
+  display: flex;
+}
+
+.contento ul{
+  padding-top: 24px;
+  border-top: #2b2b2b solid 1px;
+}
+
+.contento li{
+  list-style: none;
+  margin-bottom: .5rem;
+  font-size: var(--18px);
+  line-height: var(--32px);
+  opacity: .8;
+}
+
+.lefto{
+  align-items: flex-start;
+  justify-content: flex-end;
+  display: flex;
+}
+
+.inner__small-card,
+.inner__big-card{
+  margin-bottom: 100px;
+}
+
+.inner__small-pic{
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  margin-bottom: var(--24px);
+}
+
+.inner__big-pic{
+  width: 100%;
+  height: 680px;
+  object-fit: cover;
+  margin-bottom: var(--24px);
+}
+
+.inner__card-name{
+  font-size: var(--24px);
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+
+.inner__card-txt{
+  font-size: var(--18px);
+  opacity: .8;
+}
