--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ select {
 
 .home__btn-svg{
   position: relative;
-  z-index: 999;
+  z-index: 9;
   transition: .3s;
 }
 
@@ -1301,4 +1301,50 @@ select {
 
 .tabs__button:last-child{
   margin-right: 0;
+}
+
+.big__img-top{
+  padding: 70px 0;
+}
+
+.big__img-txt{
+  font-size: var(--24px);
+  line-height: var(--32px);
+  opacity: .7;
+}
+
+.big__img-button{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.big__img-text{
+  display: flex;
+  align-items: center;
+}
+
+.big__img-btn{
+  width: 220px;
+  height: 220px;
+  border: 1px solid var(--blue);
+  border-radius: 50%;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: var(--18px);
+  font-weight: 700;
+  transition: .3s;
+}
+
+.big__img-btn:hover{
+  background: var(--blue);
+  color: white;
+}
+
+.small__link-card,
+.big__link-card{
+  display: block;
 }
