--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,8 @@ select {
 
 .port__pic{
   width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 
 .port__card-title{
@@ -1523,4 +1525,166 @@ select {
   
 .linko{
   color: var(--blue);
+}
+
+@media screen and (max-width: 992px) {
+  :root{
+    --64px: 56px;
+    --56px: 40px;
+    --40px: 32px;
+    --32px: 28px;
+    --28px: 24px;
+    --24px: 20px;
+    --20px: 18px;
+    --18px: 16px;
+    --16xp: 14px;
+  }
+  .home__title{
+    font-size: 64px;
+    line-height: 70px;
+  }
+  .title{
+    font-size: var(--40px);
+    line-height: 45px;
+  }
+  .reload__btn{
+    width: 150px;
+    height: 150px;
+  }
+  .about__title{
+    font-size: var(--56px) !important;
+  }
+  .home__btn{
+    width: 150px;
+    height: 150px;
+  }
+  .rotate__txt{
+    display: none;
+  }
+  .section{
+    padding: 60px 0;
+  }
+  .radiohead{
+    padding-left: .5rem !important;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .title{
+    line-height: 100%;
+    font-size: var(--32px);
+  }
+  .port__card-top{
+    flex-wrap: wrap;
+  }
+  .port__top-links{
+    margin-top: 1rem;
+  }
+  .port__card-link{
+    margin-right: var(--20px);
+  }
+  .navbar__pic{
+    width: 70px;
+  }
+  .navbar__lang-link{
+    font-size: var(--20px);
+  }
+  .about__sub,
+  .about__txt{
+    margin-bottom: 1rem !important;
+    font-size: var(--24px);
+    opacity: 1;
+    max-width: 100%;
+  }
+  .about__title{
+    line-height: 100%;
+  }
+  .partners__title{
+    margin-bottom: 1rem;
+  }
+  .partners__card{
+    padding: 16px 0;
+  }
+  .blog__row{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer__txt{
+    font-size: var(--40px);
+    line-height: 120%;
+  }
+  .foot__col-left,
+  .footer__col-rigth{
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .home__container{
+    flex-wrap: wrap;
+  }
+  .home__sub{
+    margin-bottom: 2rem;
+  }
+  .home__btn{
+    margin-bottom: 0;
+  }
+  .about__grid{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .home__title{
+    font-size: var(--56px);
+    line-height: 130%;
+  }
+  .rev__card-txt{
+    line-height: 140%;
+  }
+  .blog__row{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .port__card-link{
+    margin-bottom: .5rem;
+    display: inline-block;
+  }
+  .port__pic{
+    height: 320px;
+  }
+  .about__sub,
+  .about__txt{
+    font-size: var(--20px);
+    line-height: 140%;
+  }
+  .contact{
+    padding: 60px 0;
+  }
+  .justify,
+  .contact__form{
+    padding: 20px;
+  }
+  .contact__sub{
+    margin-bottom: 2rem;
+  }
+  .con__input{
+    width: 100% !important;
+  }
+  .flexer,
+  .flexer__select{
+    flex-direction: column;
+  }
+  .flexer__select div{
+    padding: 0 .7rem !important;
+    width: 100% !important;
+  }
+  .scroll-header{
+    padding: 10px 0;
+  }
+  .navbar__pic{
+    width: 50px;
+  }
+  .navbar__lang{
+    display: none;
+  }
 }
