--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,6 @@ select {
     height: 100vh;
     display: flex;
     align-items: center;
-    background: url(../img/blackback.jpg) center no-repeat;
-    background-size: cover;
     position: relative;
 }
 
@@ -324,7 +322,7 @@ select {
     top: 0;
     position: absolute;
     content: '';
-    background: rgba(0, 0, 0, 0.568);
+    background: rgba(0, 0, 0, 0.15);
 }
 
 .home__container{
@@ -1812,3 +1810,6 @@ select {
     font-size: var(--16xp);
   }
 }
+
+
+/* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #000000; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
