--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ select {
     height: 100vh;
     display: flex;
     align-items: center;
-    background: url(../img/blackback.jpg) center no-repeat;
+    background: url(../img/home.gif) center no-repeat;
     background-size: cover;
     position: relative;
 }
